--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
 * {
   padding: 0;
   margin: 0;
-  font-family: 'Exo 2', sans-serif
+  font-family: 'Exo 2', sans-serif;
 }
 
 a {
@@ -12,6 +12,8 @@ a {
   max-width: 1140px;
   margin: 0 auto;
   padding: 0 15px;
+  position: relative;
+  z-index: 1;
 }
 
 h1 {
