--- a/assets/style.css
+++ b/assets/style.css
@@ -8,11 +8,11 @@ a {
   text-decoration: none;
 }
 
-/* .container {
+.container {
   max-width: 1140px;
   margin: 0 auto;
   padding: 0 15px;  
-} */
+}
 
 h1 {
   font-size: 24px;
