--- a/assets/style.css
+++ b/assets/style.css
@@ -24,3 +24,24 @@ strong {
   font-size: 24px;
   text-align: center;  
 }
+
+table, th, td {
+  border: 1px solid black;
+  text-align: center;
+}
+
+thead {
+  background-color: rgba(56, 52, 52, 0.5);
+}
+th, td {
+  padding: 5px;
+}
+
+tr:hover {
+  background-color: gray;
+}
+
+table {
+  margin-bottom: 30px;
+}
+
