--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,9 @@
 * {
   padding: 0;
   margin: 0;
-  font-family: 'Exo 2', sans-serif;
+  /* font-family: 'Exo 2', sans-serif; */
+  font-family: 'Montserrat', light;
+  font-size: 20px;
 }
 
 a {
@@ -42,6 +44,6 @@ tr:hover {
 }
 
 table {
-  margin-bottom: 30px;
+  margin: 30px 0  30px 0;
 }
 
