--- a/assets/style.css
+++ b/assets/style.css
@@ -10,6 +10,13 @@ a {
   text-decoration: none;
 }
 
+swiper-container {
+  overflow: hidden;
+}
+swiper-container{
+  --swiper-theme-color: black !important;
+}
+
 .container {
   max-width: 1644px;
   margin: 0 auto;
@@ -46,4 +53,3 @@ tr:hover {
 table {
   margin: 30px 0  30px 0;
 }
-
