--- a/assets/style.css
+++ b/assets/style.css
@@ -34,11 +34,13 @@ strong {
 table, th, td {
   border: 1px solid black;
   text-align: center;
-  font-size: 20px;
+  font-size: 20px;  
 }
-
+.tablescroll {
+	overflow-x: scroll;
+}
 thead {
-  background-color: rgba(56, 52, 52, 0.5);
+  background-color: rgba(56, 52, 52, 0.5); 
 }
 th, td {
   padding: 5px;
@@ -50,4 +52,5 @@ tr:hover {
 
 table {
   margin: 30px 0  30px 0;
+  overflow-x: scroll;
 }
