--- a/assets/style.css
+++ b/assets/style.css
@@ -56,3 +56,18 @@ table {
   margin: 30px 0  30px 0;
   overflow-x: scroll;
 }
+
+.btn {
+  border: 3px solid #1e3a8a;
+  padding: 14px;
+  text-align: center;
+  border-radius: 10px;
+  font-size: 18px;
+  flex: 1;
+}
+
+.btn:hover {
+  color: white;
+  background: #1e3a8a;
+  transition: background-color 0.3s ease;
+}
